# mp2-lab2-matrix

./: CMakeLists.txt
cmake/: function.cmake
gtest/: CMakeLists.txt
include/: CMakeLists.txt  tmatrix.h
samples/: CMakeLists.txt  sample_matrix.cpp
test/: CMakeLists.txt  test_tmatrix.cpp  test_tvector.cpp
